--- a/index.html
+++ b/index.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Doja Cat</title>
+        <title>Scarlet is Here</title>
         <link rel="stylesheet" href="styles.css"/>
     </head>
     <body>
-        <h1>Scarlet</h1>
-        
-        <a href="/singles/attention.html" id="single1">Attention</a>
-        <a href="/singles/pttr.html" id="single2">Paint the Town Red</a>
-        <a href="/singles/demons.html" id="single3">Demons</a>
+        <nav class="center">
+            <a href="/singles/attention.html" class="navi">ATTENTION</a>
+            <a href="/singles/pttr.html" class="navi">PAINT THE TOWN RED</a>
+            <a href="/singles/demons.html" class="navi">DEMONS</a>
+        </nav>
+
+        <h1 class="center main">SCARLET</h1>
+        <h3 class="center secondary">DOJA CAT</h3>
     </body>
+    <footer>
+        <a href="https://www.dojacat.com/" target="_blank" class="footi">TOUR</a>
+        <a href="https://www.instagram.com/dojacat/" target="_blank" class="footi">INSTAGRAM</a>
+        <a href="https://twitter.com/dojacat" target="_blank" class="footi">TWITTER</a>
+    </footer>
 </html>
