Added "Attention" song info & made style changes.

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Scarlet is Here</title>
+        <title>SCARLET IS HERE</title>
         <link rel="stylesheet" href="styles.css"/>
     </head>
-    <body>
+    <body class="home">
         <nav class="center">
             <a href="/singles/attention.html" class="navi">ATTENTION</a>
             <a href="/singles/pttr.html" class="navi">PAINT THE TOWN RED</a>
