Added "Demons" song info

--- a/singles/demons.html
+++ b/singles/demons.html
@@ -2,12 +2,43 @@
 
 <html>
     <head>
-        <title>Demons</title>
-        <link rel="stylesheet" href="styles.css"/>
+        <title>DEMONS</title>
+        <link rel="stylesheet" href="../styles.css"/>
     </head>
-    <body>
-        <h1 id="single3">Demons</h1>
+    <body class="song">
+        <h1 class="song-title">DEMONS</h1>
+        <nav class="center">
+            <a href="../index.html" class="return">RETURN TO HOMEPAGE</a>
+        </nav>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/qwtyEKTGGQ8?si=WtwFY3xAXnhpffxs" 
+        title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
+        gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
-        <a href="index.html">Go Back</a>
+        <div class="info">
+            <img src="../resources/demons.png" alt="Doja Cat Demons Single Cover"/>
+            
+            <div class="container">
+                <p>This is Doja Cat's third single to be released from her new album, "Scarlet". It was released with "Paint the Town Red" 
+                    as an EP, in addition to the latter's slowed down, sped-up, and instrumental versions. The song, similarly to "Attention" 
+                    and "Paint the Town Red", addresses the criticism and insults Doja receives on a daily basis; specifically, the idea that 
+                    she's "demonic" or has sold her soul for her fame.</p>
+
+                <p>This song stirred controversy throughout the media, as Doja Cat depicts herself as a demon haunting the house
+                    of a family. This led to Doja Cat being accused by many of being a Satanist. In responce to such particular controversies,
+                    she has released music that plays into the drama to troll the haters.
+                </p>
+                    
+                <p>Doja confirmed the release to be for September 1, 2023, in an Instagram post, as well as referencing a few of the lyrics 
+                    in another post twelve days prior.</p>
+
+                <p>- GENIUS</p>
+            </div>
+        </div>
     </body>
+
+    <footer>
+        <a href="https://www.dojacat.com/" target="_blank" class="footi">TOUR</a>
+        <a href="https://www.instagram.com/dojacat/" target="_blank" class="footi">INSTAGRAM</a>
+        <a href="https://twitter.com/dojacat" target="_blank" class="footi">TWITTER</a>
+    </footer>
 </html>
