Added "Paint the Town Red" song info.

--- a/singles/pttr.html
+++ b/singles/pttr.html
@@ -2,12 +2,44 @@
 
 <html>
     <head>
-        <title>Paint the Town Red</title>
-        <link rel="stylesheet" href="styles.css"/>
+        <title>PAINT THE TOWN RED</title>
+        <link rel="stylesheet" href="../styles.css"/>
     </head>
-    <body>
-        <h1 id="single2">Paint the Town Red</h1>
+    <body class="song">
+        <h1 class="song-title">PAINT THE TOWN RED</h1>
+        <nav class="center">
+            <a href="../index.html" class="return">RETURN TO HOMEPAGE</a>
+        </nav>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/m4_9TFeMfJE?si=sFDc6GvqMQgBSVAA" 
+        title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
+        gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
-        <a href="index.html">Go Back</a>
+        <div class="info">
+            <img src="../resources/pttr.png" alt="Doja Cat Paint the Town Red Single Cover"/>
+            
+            <div class="container">
+                <p>"Paint The Town Red" was released on August 4, 2023 as the lead single from Doja Cat's upcoming fourth-studio album that 
+                    is expected to be released on September 22nd. On the hip-hop and jazz-fused song she samples "Walk On By" by Dionne 
+                    Warwick over a smooth beat. She raps about the people who've disliked and hated her for her change in appearance.</p>
+
+                <p>The term, paint the town red, is an expression in American slang which means to go on a reckless debauch or to be wildly 
+                    extravagant. This metaphor is used to apply on bonfires which (not literally) paint the sky or scenery red. 
+                    (Source: The Guardian)
+                </p>
+                    
+                <p>"Paint the Town Red" notably shot to Number 1 on the Billboard Hot 100 and made Spotify history as the first rap song by a 
+                    solo female artist to top the USA Top 50 chart. The song was also credited as the first rap song to hit Number 1 on
+                    the Billbord Hot 100 in 2023 — marking the first rap Hot 100 No.1 in over a year. This entry ends the longest break
+                    for the genre on top of the chart since 2001.</p>
+
+                <p>- GENIUS</p>
+            </div>
+        </div>
     </body>
+
+    <footer>
+        <a href="https://www.dojacat.com/" target="_blank" class="footi">TOUR</a>
+        <a href="https://www.instagram.com/dojacat/" target="_blank" class="footi">INSTAGRAM</a>
+        <a href="https://twitter.com/dojacat" target="_blank" class="footi">TWITTER</a>
+    </footer>
 </html>
